--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
         </div>
         <div class="header-right">
             <div class="board-controls">
-                <button id="add-column-btn">+ Add Column</button>
+                <button id="archive-board-btn" title="Archive Board">
+                    <i class="fas fa-archive"></i> Archive Board
+                </button>
                 <button id="settings-btn" class="icon-btn" title="Settings">
                     <i class="fas fa-cog"></i>
                 </button>
