ui: improve header controls and notification system
  - Add board refresh button with spinning animation
  - Restyle board selector to match other header controls
  - Update card collapse behavior to maintain consistent header heights
  - Add options for customizable toast notifications with improved styling
  - Move Add Column button to board area and match color scheme with other
  controls

--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,18 @@
                 <button id="copy-board-info-btn" class="icon-btn" title="Copy Board Info">
                     <i class="fas fa-copy"></i>
                 </button>
+                <button id="refresh-board-btn" class="icon-btn" title="Refresh Board">
+                    <i class="fas fa-sync-alt"></i>
+                </button>
                 <h1 id="project-name" contenteditable="true">My Kanban Board</h1>
             </div>
         </div>
         <div class="header-right">
             <div class="board-controls">
                 <div class="board-selector-container">
+                    <button id="board-select-btn" title="Load Board">
+                        <i class="fas fa-folder-open"></i> Load Board
+                    </button>
                     <select id="board-selector" title="Select Board">
                         <!-- Board options will be dynamically populated -->
                     </select>
