--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
                 <button id="refresh-board-btn" class="icon-btn" title="Refresh Board">
                     <i class="fas fa-sync-alt"></i>
                 </button>
-                <h1 id="project-name" contenteditable="true">My Kanban Board</h1>
+                <h1 id="project-name">My Kanban Board</h1>
             </div>
         </div>
         <div class="header-right">
