--- a/app/index.html
+++ b/app/index.html
@@ -221,5 +221,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="module" src="js/app.js"></script>
+
+    <footer style="text-align: center; padding: 1em;">
+      <a href="http://localhost:6006" target="_blank" rel="noopener noreferrer">View Storybook</a>
+    </footer>
 </body>
 </html>
